--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "es6-shim": "^0.22.1",
     "phantomjs": "^1.9.12",
     "phridge": "^1.0.7",
-    "requirejs": "^2.1.15"
+    "requirejs": "^2.1.15",
+    "winston": "^0.8.3"
   }
 }
