--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "coa": "^0.4.1",
     "es6-shim": "^0.22.1",
+    "jsdom": "^1.5.0",
     "phantomjs": "^1.9.12",
     "phridge": "^1.0.7",
     "requirejs": "^2.1.15",
